+ category defintion  + scripts to run the SWTbot test headlessly (still to figure out why the problem example has a class not found exception).
git-svn-id: https://computing-research.open.ac.uk/repos/openpf/trunk@213 650c8b6b-ff4b-431b-9fdd-e90af81125e7